# ZKLoRA

./: .coverage  .cursorrules  .gitignore  .gitmodules  Cargo.toml  a_server.py  a_side_mpi_sample_script.py  activations_commit.py  b_server.py  b_side_mpi_sample_script.py  build_rs_cov.profraw  compact_proof.py  forward_proof.py  mnist_mlp.onnx  model_with_loss.onnx  proof_metrics.csv  pyproject.toml  readme.md  requirements.txt  sample_script.py  save_acts_to_json.py  save_loras_to_onnx.py  save_onnx_and_json.py  save_onnx_json_only_x_input.py  setup.py  simple_test.onnx  simple_test.py  test_multi_input.onnx  test_onnx_json_comp.py  validation.py  verify_proofs.py  weights_commit.py
.github/workflows/: test.yml
examples/: lora_commitment.ipynb  lora_forward_pass.ipynb
intermediate_activations/: layer_0_key_projection.json  layer_1_key_projection.json  layer_2_key_projection.json  layer_3_key_projection.json  layer_4_key_projection.json  layer_5_key_projection.json
libs/merkle/: Cargo.toml
libs/merkle/src/: lib.rs  main.rs
lora_onnx_params/: base_model_model_transformer_h_0_attn_c_attn.onnx  base_model_model_transformer_h_1_attn_c_attn.onnx  base_model_model_transformer_h_2_attn_c_attn.onnx  base_model_model_transformer_h_3_attn_c_attn.onnx  base_model_model_transformer_h_4_attn_c_attn.onnx  base_model_model_transformer_h_5_attn_c_attn.onnx
paper/: figures.py  main.bbl  main.blg  main.tex  refs.bib
scripts/: test_with_coverage.sh
split-inference/: a_server.py  b_server.py  loss_check.py  split_inference.py
src/: README.md  pyproject.toml  requirements.txt
src/scripts/: optimized_lora_example.py
src/zklora/: OPTIMIZATIONS.md  __init__.py  activations_commit.py  halo2_low_rank_chip.py  halo2_wrapper.py  low_rank_circuit.py  mpi_lora_onnx_exporter.py  polynomial_commit.py  zk_proof_generator.py  zk_proof_generator_optimized.py
src/zklora/base_model_user_mpi/: __init__.py
src/zklora/libs/: Cargo.toml  __init__.py
src/zklora/libs/plonky3/: Cargo.toml
src/zklora/libs/plonky3/src/: main.rs
src/zklora/libs/zklora_halo2/: Cargo.toml  build.rs
src/zklora/libs/zklora_halo2/src/: circuit.rs  field_traits.rs  lib.rs  quantization.rs  tests.rs
src/zklora/libs/zklora_halo2/tests/: test_zklora_halo2.py
tests/: test_activations_commit.py  test_base_model_user_mpi.py  test_circuit_roundtrip.py  test_halo2_low_rank_chip.py  test_halo2_wrapper.py  test_integration.py  test_lora_contributor_mpi.py  test_low_rank_circuit.py  test_mpi_lora_onnx_exporter.py  test_multi_contributor.py  test_poly_commit.py  test_polynomial_commit.py  test_zk_proof_generator.py  test_zk_proof_generator_optimized.py
zklora/: __init__.py  activations_commit.py  generate_proofs.py  lora_onnx_exporter.py  onnx_json_preparation.py  zk_proof_generator.py
zklora/a-server/: __init__.py
zklora/a_server/: __init__.py
zklora/b-server/: __init__.py
zklora/b_server/: __init__.py
(+3 files in other folders)
