[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[project]
name = "zklora"
version = "0.1.0"
description = "Zero-knowledge proofs for LoRA using Halo2"
authors = [
    {name = "ZKLoRA Team", email = "team@zklora.org"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
    "blake3>=0.3.3",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "merklelib>=0.2.2",
    "merkly~=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0"
]

[tool.maturin]
python-source = "src"
features = ["pyo3/extension-module"]
module-name = "zklora.libs.zklora_halo2"
bindings = "pyo3"
manifest-path = "src/zklora/libs/zklora_halo2/Cargo.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/zklora --cov-report=term-missing"

[tool.coverage.run]
source = ["src/zklora"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 