[package]
name = "zklora_halo2"
version = "0.1.0"
edition = "2021"

[lib]
name = "zklora_halo2"
crate-type = ["cdylib"]

[dependencies]
halo2_proofs = "0.3.0"
num-traits = "0.2"
pyo3 = { version = "0.19", features = ["extension-module"] }
rand_core = "0.6"
subtle = "2.5"
ff = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
bincode = "1.3"
thiserror = "1.0" 