[package]
name = "zklora_halo2"
version = "0.1.0"
edition = "2021"

[lib]
name = "zklora_halo2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
halo2_proofs = "0.3.0"
ff = "0.13.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_core = "0.6.4"
subtle = "2.5.0"
pasta_curves = "0.5.1"
blake2b_simd = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
pyo3-build-config = "0.19.2" 